@@ -1,4 +1,4 @@
-version: 3.0.3-{build}
+version: 3.0.4-{build}
 configuration: Release
 
 image: Visual Studio 2022
