@@ -2,12 +2,12 @@
 .\"     Title: dvisvgm
 .\"    Author: Martin Gieseking <martin.gieseking@uos.de>
 .\" Generator: DocBook XSL Stylesheets vsnapshot <http://docbook.sf.net/>
-.\"      Date: 2022-10-14
+.\"      Date: 2023-02-21
 .\"    Manual: dvisvgm Manual
-.\"    Source: dvisvgm 3.0.3
+.\"    Source: dvisvgm 3.0.4
 .\"  Language: English
 .\"
-.TH "DVISVGM" "1" "2022\-10\-14" "dvisvgm 3\&.0\&.3" "dvisvgm Manual"
+.TH "DVISVGM" "1" "2023\-02\-21" "dvisvgm 3\&.0\&.4" "dvisvgm Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -299,7 +299,7 @@ predefined colors (\m[blue]https://www.w3.org/TR/SVG11/types.html#ColorKeywords\
 Adds comments with further information about selected data to the SVG file\&. Currently, only font elements and font CSS rules related to native fonts are annotated\&.
 .RE
 .PP
-\fBembed\-bitmaps\fR
+\fB\-\-embed\-bitmaps\fR
 .RS 4
 Embeds the contents of bitmap files into the generated SVG files instead of adding file references\&. Because of the base64\-encoded data, the SVG files are usually much bigger but at the same time more portable because they don\(cqt rely on external bitmap files\&.
 .sp
