@@ -1,3 +1,6 @@
+## This file is part of dvisvgm
+## Copyright (C) 2005-2023 Martin Gieseking <martin.gieseking@uos.de>
+
 if !HAVE_BROTLI
 BROTLI_CFLAGS += -I$(dvisvgm_srcdir)/libs/brotli/include
 BROTLI_LIBS += ../libs/brotli/libbrotli.a
