@@ -1,12 +1,9 @@
-if USE_BUNDLED_MD5
 noinst_LIBRARIES = libmd5.a
 
 libmd5_a_SOURCES = md5.c md5.h
 AM_CXXFLAGS = -Wall
 
 md5.c: md5.h
-
-endif
 
 CLEANFILES = *.gcda *.gcno
 
